# fyle-integrations-interview-backend

./: pyproject.toml
apps/students/: admin.py
apps/teachers/: admin.py  serializers.py  urls.py  views.py
fyle_classroom/: urls.py
